--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       POSTGRES_USER: usuario
       POSTGRES_PASSWORD: 87654321
-      POSTGRES_DB: banco-espacial
+      POSTGRES_DB: dbgis
     ports:
       - 5432:5432
     networks:
