--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/banco-espacial}
+    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/dbgis}
     driver-class-name: org.postgresql.Driver
     username: usuario
     password: 87654321
