--- a/pom.xml
+++ b/pom.xml
@@ -34,10 +34,18 @@
 <!--			<groupId>org.postgresql</groupId>-->
 <!--			<artifactId>postgresql</artifactId>-->
 <!--		</dependency>-->
+
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-spatial</artifactId>
 			<version>6.2.3.Final</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.geolatte</groupId>
+			<artifactId>geolatte-geom</artifactId>
+			<version>1.9.0</version>
 		</dependency>
 
 		<dependency>
