--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,7 @@ spring:
     properties:
       hibernate:
         spatial:
+          ogc_strict: true
           enabled: true
           dialect: org.hibernate.spatial.dialect.oracle.OracleSpatial10gDialect
           connection_finder: br.com.postgis.postgres.CustomConnectionFinderForSpatialSupport
