Ajuste do yml e entidade

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,6 @@ spring:
           connection_finder: br.com.postgis.postgres.CustomConnectionFinderForSpatialSupport
           dialect: org.hibernate.spatial.dialect.oracle.OracleSpatial10gDialect
         dialect: org.hibernate.dialect.Oracle12cDialect
-      GEOLATTE_USE_SDO_POINT_TYPE: 'true'
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
+    show-sql: true
